--- a/views/home.ejs
+++ b/views/home.ejs
@@ -73,7 +73,6 @@
    <div class="container">
     <div class="row">
         <div class="col-lg-12 text-center">
-            <!-- <h1>url shortner</h1> -->
         </div>
     </div>
     <form action="/create" method="post">
@@ -94,7 +93,7 @@
                 <div class="card-body text-secondary">
                   <p>Shortened Url:</p>
                   <h6 class="card-title">
-                    <a href="http://localhost:5000/<%= urlResult[i].shortUrl %>" target="_blank">http://localhost:5000/<%= urlResult[i].shortUrl %></a>
+                    <a href="https://url-shortner-6uhu.onrender.com/<%= urlResult[i].shortUrl %>" target="_blank">https://url-shortner-6uhu.onrender.com/<%= urlResult[i].shortUrl %></a>
                   </h6>
                   <hr>
                   <p>Long Url:</p>
