--- a/views/home.ejs
+++ b/views/home.ejs
@@ -93,7 +93,7 @@
                 <div class="card-body text-secondary">
                   <p>Shortened Url:</p>
                   <h6 class="card-title">
-                    <a href="https://url-shortner-6uhu.onrender.com/<%= urlResult[i].shortUrl %>" target="_blank">https://url-shortner-6uhu.onrender.com/<%= urlResult[i].shortUrl %></a>
+                    <a href="https://url-shortner-6uhu.onrender.com/<%= urlResult[i].shortUrl %>" target="_blank">https://url-shortner-/<%= urlResult[i].shortUrl %></a>
                   </h6>
                   <hr>
                   <p>Long Url:</p>
